Update package details & npm scripts

--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "nuwzullund",
-  "description": "Translate any sentence into the New Zealand equivalent",
   "version": "0.0.1",
-  "private": true,
+  "description": "Translate any sentence into the New Zealand equivalent",
+  "scripts": {
+    "start": "node app"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/rowanoulton/nuwzullund.git"
+  },
   "dependencies": {
     "express": "~4.2.0",
     "static-favicon": "~1.0.0",
